edit tabel validate, ganti favicon

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -21,7 +21,7 @@
     -->
     <link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
     
-    <title>React App</title>
+    <title>Accidentifier Admin</title>
   </head>
   <body>
     <noscript>
